styles.css
*{
	margin: 0;
	padding: 0;
}

:root {
    --footer: #005ab9; /* a specific blue */
    --accent: #000000; /* a black */
}

body {
	background-color: var(--footer);
	font-family: Arial, Helvetica, sans-serif;
}

/********** Base Components **********/
p {
	font-size: 18px;
	line-height: 24px;
	margin: 5px 0;
}

#results span, #equilibrium span {
	background-color: #cccccc;
	padding: 2px 5px;
	font-family: "Courier New", Courier, monospace;
	border: 1px solid #ffffff;
	border-radius: 2px;
}

button {
	font-weight: bold;
	outline: none;
}

a {
	text-decoration: none;
}

/********** Extra Components **********/
.shadow { /* Creates a shadow on a div or image */
	box-shadow: 0 0 25px 2px #000000;
}

.center { /* Centers a div */
	text-align: center;
	margin-left: auto;
	margin-right: auto;
}

/********** Header **********/
#header {
	background-image: linear-gradient(#0c78eb, var(--footer)/*#0056b3*/ );
    width: 75%;
    max-width: 725px;
	min-width: 520px;
	height: 60px;
	text-align: center;
    padding: 25px 0 5px 0;
    margin-left: auto;
    margin-right: auto;
}
#title {
	color: #ffffff;
	width: 100%;
}

/********** Page **********/
#pageBackground {
	background-color: #ffffff;
	background-image: url("./media/grid-pattern.png");
	background-repeat: repeat;
}
#page {
	background-color: #eeeeee;
	width: 75%;
	max-width: 723px;
	min-width: 520px;
	min-height: 400px;
	margin-left: auto;
	margin-right: auto;
	padding: 15px 0;
    text-align: left;
    border-left: 1px solid var(--footer);
    border-right: 1px solid var(--footer);
}

/********** Main Divs **********/
#graphDiv {
	background-color: #ffffff;
	width: 500px;
	border: 3px solid var(--footer);
	margin-bottom: 5px;
}

canvas {
    background-color: #ffffff;
	border-bottom: 3px solid var(--footer);
	margin: 0;
}

#results {
	width: 100%;
	height: 60px;
}

#equilibrium {
	width: 100%;
	height: 60px;
	border-top: 3px solid var(--footer);
}

#vectors {
	width: 100%;
}

/********** Vector **********/
.lilShadow {
	box-shadow: 0 0 10px 2px #383838;
}

.vector {
	background-color: var(--footer);
	width: 500px;
	height: 50px;
	margin-top: 5px;
	/* border: 1px solid var(--footer); */
	border-radius: 25px;
	float: center;
}

input[type=color] {
	width: 22px;
	height: 22px;
	/* border-radius: 25px; */
	margin: 12px 5px 0 10px;
	float: left;
}

.activeCheck {
	width: 25px;
	height: 25px;
	float: right;
	margin-top: 13px;
	margin-right: 15px;
}

input[type=number] {
	width: 75px;
	height: 25px;
	margin-top: 10px;
	border-radius: 5px;
	border: 1px solid #000000;
	text-align: center;
	float: left;
	outline: none;
}
/* Remove arrows on side */
input[type=number]::-webkit-inner-spin-button, 
input[type=number]::-webkit-outer-spin-button { 
  -webkit-appearance: none; 
  margin: 0; 
}

.vector p {
	color: #ffffff;
	font-size: 20px;
	float: left; 
	margin: 11px 4px;
}

/********** Add Vector Button **********/
.blueBtn {
	background: none;
	color: #000000;
	border-radius: 25px;
	border: 3px solid var(--footer);
	padding: 10px 20px;
	margin-top: 10px;
	font-size: 16px;
	outline: none;
	transition-duration: 0.7s;
}
.blueBtn:hover {
	background-color: var(--footer);
	color: #ffffff;
}

/********** Footer **********/
#footer{
	background-color: var(--footer);
	width: 100%;
	height: 50px;
	padding-top: 15px;
}

.footerBtn {
	background: none;
	color: #ffffff;
	height: 40px;
	margin: 0 15px;
	padding: 0 15px;
	font-size: 16px;
	border-radius: 25px;
	border: 3px solid var(--accent);
	transition-duration: 0.7s;
}
.footerBtn:hover {
	background-color: var(--accent);
	color: #ffffff;
}

